feat: release 2.0.0